--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,4 +10,6 @@
 	<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("evenly.png", alt: "Evenly logo"), 'http://blog.evenly.com/' %> 
+<div class="center">
+	<%= link_to image_tag("evenly.png", alt: "Evenly logo"), 'http://blog.evenly.com/' %>
+</div> 
