--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,25 @@
 <%= provide(:title,'Sign up') %>
 <h1>Sign up</h1>
-<p>This is the sign up page.</p>
+
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<%= form_for(@user) do |f| %>
+			<%= f.label :name %>
+			<%= f.text_field :name %>
+
+			<%= f.label :email %>
+			<%= f.email_field :email %>
+
+			<%= f.label :password %>
+			<%= f.password_field :password %>
+
+			<%= f.label :password_cofirmation, "Confirmation" %>
+			<%= f.password_field :password_cofirmation %>
+
+			<%= f.submit "Create my Account", class: "btn btn-primary" %>
+		<% end %>
+	</div>
+</div>
+
+
+
