--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,17 +4,19 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for(@user) do |f| %>
+			<%= render 'shared/error_messages' %>
+
 			<%= f.label :name %>
-			<%= f.text_field :name %>
+			<%= f.text_field :name, class: "form-control" %>
 
 			<%= f.label :email %>
-			<%= f.email_field :email %>
+			<%= f.email_field :email, class: "form-control" %>
 
 			<%= f.label :password %>
-			<%= f.password_field :password %>
+			<%= f.password_field :password, class: "form-control" %>
 
 			<%= f.label :password_cofirmation, "Confirmation" %>
-			<%= f.password_field :password_cofirmation %>
+			<%= f.password_field :password_cofirmation, class: "form-control" %>
 
 			<%= f.submit "Create my Account", class: "btn btn-primary" %>
 		<% end %>
