--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,27 @@
 <% provide(:title, "Home") %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
+	<div class="center jumbotron">
+		<h1>Sample App</h1>
+		<h2>
+		  	This is the home page for the
+		  	<a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+		  	sample application.
+		</h2>
+		<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+	</div>
 
-<div class="center jumbotron">
-	<h1>Sample App</h1>
-	<h2>
-	  	This is the home page for the
-	  	<a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-	  	sample application.
-	</h2>
-	<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
-
-<div class="center">
-	<%= link_to image_tag("evenly.png", alt: "Evenly logo"), 'http://blog.evenly.com/' %>
-</div> 
+	<div class="center">
+		<%= link_to image_tag("evenly.png", alt: "Evenly logo"), 'http://blog.evenly.com/' %>
+	</div> 
+<% end %>
